namespace DataFormer.ApplicationCore.ValueObjects
{
    public enum DataType
    {
        Integer,
        Decimal,
        DateTime,
        Date,
        Time,
        Label,
        Boolean
    }
}
