namespace DataFormer.ApplicationCore.ValueObjects
{
    public enum SearchDirection
    {
        Row,
        Column
    }
}
